--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
     <div class="container1">
       <div class="logo">
         <img src="images/logo.jpg" alt="aministrador">
-      </div>
+      </div>  
+      <!-- <button>Hamb</button> -->
       <div class="form-signon">
-        <div class="email">
-          <label for="email" >E-mail</label><br>
-          <input type="email" name="email" placeholder="Email" class="nobutton"><br>
-        </div>
-        <div class="pass">
-          <label for="password">Contraseña</label><br>
-          <input type="password" name="password" placeholder="Contraseña" class="nobutton"><br>
-        </div>
-        <div class="sign-button">
-          <input type="submit" name="Entrar" value="Entrar" id="">
-        </div>
+        <form>
+          <div class="email">
+            <label for="email" >E-mail</label><br>
+            <input type="email" name="email" placeholder="E-mail" class="nobutton" id="usuario"><br>
+          </div>
+          <div class="pass">
+            <label for="password">Contraseña</label><br>
+            <input type="password" name="password" placeholder="Contraseña" class="nobutton" id="contra"><br>
+          </div>
+          <div class="sign-button">
+            <!-- <input type="submit" name="Entrar" value="Entrar" id=""> -->
+            <button type="button" onclick="entrar()">Entrar</button>
+          </div>
+        </form>
       </div>
     </div>
     <a href="">Olvidé la contraseña</a>
@@ -41,16 +45,17 @@
     </div>
     <div class="form-register">
       <h2>Regístrate</h2>
-        <div class="grid3">
-        <input type="text" name="Nombre" placeholder="Nombre" required="true" class="grid-item1 nobutton2">
-        <input type="text" name="Apellidos" placeholder="Apellidos" required="true" class="grid-item2 nobutton2">
-        <input type="email" name="Email2" placeholder="Email" required="true" class="grid-item3 nobutton2">
-        <input type="password" name="Password1" placeholder="Password" required="true" class="grid-item4 nobutton2">
-        <input type="password" name="Password2" placeholder="Repeat Password" required="true" class="grid-item5 nobutton2">
-        <input type="submit" name="Registrar" value="Registrar" class="grid-item6">
-      </div>
+        <form class="grid3">
+          
+          <input type="text" name="Nombre" placeholder="Nombre" required="true" class="grid-item1 nobutton2" id="nombre">
+          <input type="text" name="Apellidos" placeholder="Apellidos" required="true" class="grid-item2 nobutton2" id="apellido">
+          <input type="email" name="Email2" placeholder="Email" required="true" class="grid-item3 nobutton3" id="email">
+          <input type="password" name="Password1" placeholder="Password" required="true" class="grid-item4 nobutton2" id="pass">
+          <input type="password" name="Password2" placeholder="Repeat Password" required="true" class="grid-item5 nobutton2" id="pass2">
+          <button type="button" class="grid-item6" id="boton" onclick="guardarDatos()">Registrar</button>
+        </form>
     </div>
   </div>
-  
+  <script src="main.js"></script>
 </body>
 </html>
