--- a/Contenido/contenido.html
+++ b/Contenido/contenido.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="contenido.css">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <title>Proyectos</title>
 </head>
 <body>
@@ -24,11 +25,10 @@
         <section class="proyectos">
             <div class="container">
                 <input type="search" placeholder="Buscar" id="busqueda">
-                <p>
-                    Proyecto1
-                    Proyecto2
-                </p>
-    
+                    <div class="proys">
+                        <li>Proyecto1</li>
+                        <li>Proyecto2</li>
+                    </div>           
             </div>
         </section>
         <section class="general">
